--- a/react-todo/package.json
+++ b/react-todo/package.json
@@ -8,7 +8,8 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "test": "jest"
+    "test": "jest",
+    "eject": "react-scripts eject"
   },
   "dependencies": {
     "react": "^18.3.1",
